# Curso_Rust

./: .gitignore  README.md
unidad2/: Cargo.toml
unidad2/clase/: Cargo.toml
unidad2/clase/src/: main.rs
unidad2/ejercicios/tests/: 1_test_primitive_types.rs  2_test_conversion_primitivos.rs  5_test_control_flujo_if.rs  6_test_control_flujo_for_while_loop.rs
unidad2/src/: main.rs
unidad2/tests/: 1_test_primitive_types.rs  2_test_conversion_primitivos.rs  3_test_tipos_compuestos_tuplas.rs  4_test_tipos_compuestos_array.rs  7_test_control_flujo_match.rs  8_test_control_string_str_slice.rs
unidad3/clase/: Cargo.toml
unidad3/clase/src/: main.rs
unidad3/ejercicios/src/: main.rs
unidad3/ejercicios/tests/: test_propiedad_prestamos.rs
unidad4/reto/: Cargo.toml
unidad4/reto/src/: main.rs
unidad5/clase/: Cargo.toml
unidad5/clase/src/: calculadora.rs  main.rs
unidad5/clase/src/utilidades/internet/: mod.rs  servicio_suma.rs
unidad5/mini-proyecto/nucleo-banco/: Cargo.toml
unidad5/mini-proyecto/nucleo-banco/src/: cliente.rs  cuenta.rs  lib.rs
